Closed Bug 47886 Opened 25 years ago Closed 25 years ago

Integrate ftp lib to prevent Linux installer crash

Categories

(SeaMonkey :: Installer, defect, P3)

x86
Linux
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: samir_bugzilla, Assigned: samir_bugzilla)

Details

(Keywords: crash, Whiteboard: [nsbeta3+] ETA: 09/13)

1> The download progress meter should change to indeterminate with timeouts to update it periodically. 2> The upper progress label should show the zippy number of the total being downloaded: e.g., "Downloading Mail & News (4 of 12)...", given that the upper progress meter will now be indeterminate.
Per discussion with dveditz, marking nsbeta3+.
Status: NEW → ASSIGNED
Keywords: nsbeta3
Whiteboard: [nsbeta3+]
Target Milestone: --- → M18
changing QA contact
QA Contact: gemal → gbush
We can't do item 1 unless we thread since we invoke ftp using the synchronous system() call. We had decided to to drop the thread dependency. This dependency coupled with the need for more granular feedback and the need to remove the dependency on shells (stdout/stderr redirect issues) means we should resolve this issue by integrating an ftp library instead of using timeouts with threading during download. Changing summary to reflect the same.
Summary: Better user feedback in Linux installer → Better user feedback in Linux installer: integrate ftp lib
See bug 47921 for other justifications begging that we integrate an ftp library.
Summary: Better user feedback in Linux installer: integrate ftp lib → Integrate ftp lib to prevent Linux installer crash
Preliminary cut of |nsFTPConn| completed.
Keywords: crash
Fix ready. Awaiting review.
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Still need to cover passive ftp support.
verified code fix
Status: RESOLVED → VERIFIED
Using this bug to track passive mode support since that is part of the ftp impl. We need passive support since there is a siginificant group of users that will be downloading from behind a firewall. Reopening.
Status: VERIFIED → REOPENED
Resolution: FIXED → ---
Status: REOPENED → ASSIGNED
Whiteboard: [nsbeta3+] → [nsbeta3+] ETA: 09/13
Passive support completed. Tested against sweetlou optimized zippies. Awaiting review.
Fix checked in. Needs to be tested against ftpN.netscape.com where N > 8. QA, feel free to contact me for verification if you have questions.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago25 years ago
Resolution: --- → FIXED
verified in build 2000092609MN6
Status: RESOLVED → VERIFIED
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.