*** NOT PART OF TBOX BUILDS ***

First cut at ftp impl for linux installer (for nsbeta3+ b=47886; r=ssu).